Cambiamos tamaños y posiciones para que esten en el medio

--- a/css/animals.css
+++ b/css/animals.css
@@ -1,38 +1,38 @@
 :root {
-  /* --------------------- ORI --------------------- */
-  --tri01-ori-polygon: polygon(10% 21.83%, 10.03% 66.02%, 26.51% 49.13%);
-  --tri02-ori-polygon: polygon(9.83% 65.75%, 21.93% 73.65%, 18.00% 58.00%);
-  --tri03-ori-polygon: polygon(30% 51.93%, 30% 71.03%, 37.91% 74%);
-  --tri04-ori-polygon: polygon(39.78% 49.98%, 30% 70.86%, 28.39% 50.06%);
-  --tri05-ori-polygon: polygon(10% 21.80%, 26.30% 9.62%, 26.53% 50.10%);
-  --tri06-ori-polygon: polygon(57.65% 49.69%, 60.50% 27.45%, 26.55% 50.09%);
-  --tri07-ori-polygon: polygon(26.53% 50.08%, 60.48% 27.47%, 26.30% 9.62%);
-  --tri08-ori-polygon: polygon(60.50% 27.47%, 57.66% 49.73%, 72.06% 53.80%);
-  --tri09-ori-polygon: polygon(72.15% 53.79%, 86.11% 56.73%, 77.15% 49.33%);
-  --tri10-ori-polygon: polygon(72.13% 53.72%, 60.51% 27.48%, 85.87% 41.62%);
-  --tri11-ori-polygon: polygon(94.21% 48.29%, 87.10% 41.03%, 99.91% 35.33%);
-  --tri12-ori-polygon: polygon(95.32% 29.50%, 91.5% 23.58%, 97.89% 21.64%);
-  --tri13-ori-polygon: polygon(86.26% 56.69%, 91.71% 55.29%, 86.63% 42.18%);
-  --tri14-ori-polygon: polygon(91.45% 22.69%, 76.95% 24.89%, 86.75% 42.23%);
-  --tri15-ori-polygon: polygon(77.24% 49.29%, 86.25% 56.71%, 86.09% 41.62%);
-  --tri16-ori-polygon: polygon(87.08% 41.08%, 94.20% 48.27%, 91.73% 55.28%);
-  --tri17-ori-polygon: polygon(90.73% 51.42%, 86.46% 51.87%, 88.91% 54.45%);
-  --tri18-ori-polygon: polygon(76.91% 24.90%, 60.49% 27.46%, 86.15% 41.62%);
-  --tri19-ori-polygon: polygon(60.49% 27.46%, 26.32% 9.63%, 74.91% 13.01%);
-  --tri20-ori-polygon: polygon(91.31% 22.62%, 99.91% 35.32%, 87.13% 41.01%);
-  --tri21-ori-polygon: polygon(65.66% 70.08%, 57.64% 49.74%, 65.99% 51.90%);
-  --tri22-ori-polygon: polygon(65.68% 70.16%, 71.73% 69.50%, 65.85% 58.59%);
-  --tri23-ori-polygon: polygon(50.98% 77.34%, 51.77% 49.65%, 43.51% 49.60%);
-  --tri24-ori-polygon: polygon(58.04% 76.07%, 51.49% 59.83%, 50.99% 77.37%);
-  --tri25-ori-polygon: polygon(79.71% 36.47%, 74.64% 43.35%, 80.76% 49.78%);
-  --tri26-ori-polygon: polygon(80.60% 49.70%, 86.02% 41.80%, 79.60% 36.53%);
-  --tri27-ori-polygon: polygon(79.21% 44.10%, 80.03% 41.18%, 81.68% 43.61%);
-  --tri28-ori-polygon: polygon(91.69% 34.83%, 87.50% 40.99%, 92.56% 46.76%);
-  --tri29-ori-polygon: polygon(92.35% 46.68%, 97.65% 39.88%, 91.70% 34.69%);
-  --tri30-ori-polygon: polygon(91.33% 42.39%, 92.01% 39.26%, 93.99% 41.63%);
-  --tri31-ori-polygon: polygon(74.91% 13.01%, 91.63% 22.64%, 60% 27.83%);
-  --tri32-ori-polygon: polygon(67.07% 35.71%, 62.03% 26.21%, 69.60% 28.82%);
-  
+  /* --------------------- ORI (Bajado 10%) --------------------- */
+  --tri01-ori-polygon: polygon(10% 31.83%, 10.03% 76.02%, 26.51% 59.13%);
+  --tri02-ori-polygon: polygon(9.83% 75.75%, 21.93% 83.65%, 18% 68%);
+  --tri03-ori-polygon: polygon(30% 61.93%, 30% 81.03%, 37.91% 84%);
+  --tri04-ori-polygon: polygon(39.78% 59.98%, 30% 80.86%, 28.39% 60.06%);
+  --tri05-ori-polygon: polygon(10% 31.8%, 26.3% 19.62%, 26.53% 60.1%);
+  --tri06-ori-polygon: polygon(57.65% 59.69%, 60.5% 37.45%, 26.55% 60.09%);
+  --tri07-ori-polygon: polygon(26.53% 60.08%, 60.48% 37.47%, 26.3% 19.62%);
+  --tri08-ori-polygon: polygon(60.5% 37.47%, 57.66% 59.73%, 72.06% 63.8%);
+  --tri09-ori-polygon: polygon(72.15% 63.79%, 86.11% 66.73%, 77.15% 59.33%);
+  --tri10-ori-polygon: polygon(72.13% 63.72%, 60.51% 37.48%, 85.87% 51.62%);
+  --tri11-ori-polygon: polygon(94.21% 58.29%, 87.1% 51.03%, 99.91% 45.33%);
+  --tri12-ori-polygon: polygon(95.32% 39.5%, 91.5% 33.58%, 97.89% 31.64%);
+  --tri13-ori-polygon: polygon(86.26% 66.69%, 91.71% 65.29%, 86.63% 52.18%);
+  --tri14-ori-polygon: polygon(91.45% 32.69%, 76.95% 34.89%, 86.75% 52.23%);
+  --tri15-ori-polygon: polygon(77.24% 59.29%, 86.25% 66.71%, 86.09% 51.62%);
+  --tri16-ori-polygon: polygon(87.08% 51.08%, 94.2% 58.27%, 91.73% 65.28%);
+  --tri17-ori-polygon: polygon(90.73% 61.42%, 86.46% 61.87%, 88.91% 64.45%);
+  --tri18-ori-polygon: polygon(76.91% 34.9%, 60.49% 37.46%, 86.15% 51.62%);
+  --tri19-ori-polygon: polygon(60.49% 37.46%, 26.32% 19.63%, 74.91% 23.01%);
+  --tri20-ori-polygon: polygon(91.31% 32.62%, 99.91% 45.32%, 87.13% 51.01%);
+  --tri21-ori-polygon: polygon(65.66% 80.08%, 57.64% 59.74%, 65.99% 61.9%);
+  --tri22-ori-polygon: polygon(65.68% 80.16%, 71.73% 79.5%, 65.85% 68.59%);
+  --tri23-ori-polygon: polygon(50.98% 87.34%, 51.77% 59.65%, 43.51% 59.6%);
+  --tri24-ori-polygon: polygon(58.04% 86.07%, 51.49% 69.83%, 50.99% 87.37%);
+  --tri25-ori-polygon: polygon(79.71% 46.47%, 74.64% 53.35%, 80.76% 59.78%);
+  --tri26-ori-polygon: polygon(80.6% 59.7%, 86.02% 51.8%, 79.6% 46.53%);
+  --tri27-ori-polygon: polygon(79.21% 54.1%, 80.03% 51.18%, 81.68% 53.61%);
+  --tri28-ori-polygon: polygon(91.69% 44.83%, 87.5% 50.99%, 92.56% 56.76%);
+  --tri29-ori-polygon: polygon(92.35% 56.68%, 97.65% 49.88%, 91.7% 44.69%);
+  --tri30-ori-polygon: polygon(91.33% 52.39%, 92.01% 49.26%, 93.99% 51.63%);
+  --tri31-ori-polygon: polygon(74.91% 23.01%, 91.63% 32.64%, 60% 37.83%);
+  --tri32-ori-polygon: polygon(67.07% 45.71%, 62.03% 36.21%, 69.6% 38.82%);
+
   --tri01-ori-bg: #ecad72;
   --tri02-ori-bg: #deac81;
   --tri03-ori-bg: #e5b784;
@@ -66,29 +66,29 @@
   --tri31-ori-bg: #cc9f6b;
   --tri32-ori-bg: #9e8972;
 
-  /* --------------------- NES --------------------- */
-  --tri01-nes-polygon: polygon(42.5% 18%, 33.75% 33%, 61.25% 27.9%);
-  --tri02-nes-polygon: polygon(66.25% 18%, 38.75% 32%, 75% 32%);
-  --tri03-nes-polygon: polygon(33.75% 43.5%, 75% 43.5%, 55% 25%);
-  --tri04-nes-polygon: polygon(66.25% 43.5%, 80% 33.7%, 60.75% 27%);
-  --tri05-nes-polygon: polygon(33.75% 33%, 48.75% 45%, 57.5% 25%);
-  --tri06-nes-polygon: polygon(60.75% 45%, 75% 32%, 55% 25%);
-  --tri07-nes-polygon: polygon(60.75% 45%, 68.25% 45%, 66.25% 40%);
-  --tri08-nes-polygon: polygon(40.5% 45%, 42.25% 40%, 48.75% 45%);
-  --tri09-nes-polygon: polygon(13.75% 26.5%, 15% 33%, 27.5% 23.5%);
-  --tri10-nes-polygon: polygon(15% 33%, 31.25% 31%, 27.5% 23.5%);
-  --tri11-nes-polygon: polygon(15% 33%, 31.25% 31%, 27.5% 39%);
-  --tri12-nes-polygon: polygon(43.75% 41%, 31.25% 31%, 27.5% 39%);
-  --tri13-nes-polygon: polygon(33.75% 10%, 52% 10%, 36.25% 3%);
-  --tri14-nes-polygon: polygon(33.75% 10%, 52% 10%, 38.75% 16%);
-  --tri15-nes-polygon: polygon(56.25% 10%, 74.25% 10%, 72.5% 3%);
-  --tri16-nes-polygon: polygon(56.25% 10%, 74.25% 10%, 70% 16%);
-  --tri17-nes-polygon: polygon(33.75% 16%, 54.25% 9%, 75% 16%);
-  --tri18-nes-polygon: polygon(33.75% 16%, 54.25% 24%, 75% 16%);
-  --tri19-nes-polygon: polygon(43.75% 23%, 54.25% 40%, 65% 23%);
-  --tri20-nes-polygon: polygon(42.5% 16%, 47.5% 18%, 47.5% 16%);
-  --tri21-nes-polygon: polygon(61.25% 16%, 61.25% 18%, 66.25% 16%);
-  --tri22-nes-polygon: polygon(51.25% 19%, 52.5% 20%, 53.75% 19%);
+  /* --------------------- NES (Escala 1.5x - Max Ancho) --------------------- */
+  --tri01-nes-polygon: polygon(43.75% 39.5%, 30.62% 62%, 71.87% 54.35%);
+  --tri02-nes-polygon: polygon(79.37% 39.5%, 38.12% 60.5%, 92.5% 60.5%);
+  --tri03-nes-polygon: polygon(30.62% 77.75%, 92.5% 77.75%, 62.5% 50%);
+  --tri04-nes-polygon: polygon(79.37% 77.75%, 100% 63.05%, 71.12% 53%);
+  --tri05-nes-polygon: polygon(30.62% 62%, 53.12% 80%, 66.25% 50%);
+  --tri06-nes-polygon: polygon(71.12% 80%, 92.5% 60.5%, 62.5% 50%);
+  --tri07-nes-polygon: polygon(71.12% 80%, 82.37% 80%, 79.37% 72.5%);
+  --tri08-nes-polygon: polygon(40.75% 80%, 43.37% 72.5%, 53.12% 80%);
+  --tri09-nes-polygon: polygon(0.62% 52.25%, 2.5% 62%, 21.25% 47.75%);
+  --tri10-nes-polygon: polygon(2.5% 62%, 26.87% 59%, 21.25% 47.75%);
+  --tri11-nes-polygon: polygon(2.5% 62%, 26.87% 59%, 21.25% 71%);
+  --tri12-nes-polygon: polygon(45.62% 74%, 26.87% 59%, 21.25% 71%);
+  --tri13-nes-polygon: polygon(30.62% 27.5%, 58% 27.5%, 34.37% 17%);
+  --tri14-nes-polygon: polygon(30.62% 27.5%, 58% 27.5%, 38.12% 36.5%);
+  --tri15-nes-polygon: polygon(64.37% 27.5%, 91.37% 27.5%, 88.75% 17%);
+  --tri16-nes-polygon: polygon(64.37% 27.5%, 91.37% 27.5%, 85% 36.5%);
+  --tri17-nes-polygon: polygon(30.62% 36.5%, 61.37% 26%, 92.5% 36.5%);
+  --tri18-nes-polygon: polygon(30.62% 36.5%, 61.37% 48.5%, 92.5% 36.5%);
+  --tri19-nes-polygon: polygon(45.62% 47%, 61.37% 72.5%, 77.5% 47%);
+  --tri20-nes-polygon: polygon(43.75% 36.5%, 51.25% 39.5%, 51.25% 36.5%);
+  --tri21-nes-polygon: polygon(71.87% 36.5%, 71.87% 39.5%, 79.37% 36.5%);
+  --tri22-nes-polygon: polygon(56.87% 41%, 58.75% 42.5%, 60.62% 41%);
 
   --tri01-nes-bg: #e3b06b;
   --tri02-nes-bg: #e3b06b;
@@ -113,68 +113,68 @@
   --tri21-nes-bg: #58432b;
   --tri22-nes-bg: #7a6c53;
 
-  /* --------------------- MAKS --------------------- */
-  --tri01-maks-polygon: polygon(50% 50%, 30% 37.5%, 10% 45%);
-  --tri02-maks-polygon: polygon(30% 37.5%, 10% 45%, 16% 62.5%);
-  --tri03-maks-polygon: polygon(50% 50%, 30% 37.5%, 36% 70%);
-  --tri04-maks-polygon: polygon(36% 70%, 30% 37.5%, 16% 62.5%);
-  --tri05-maks-polygon: polygon(10% 45%, 4% 55%, 16% 62.5%);
-  --tri06-maks-polygon: polygon(16% 62.5%, 26% 75%, 36% 70%);
-  --tri07-maks-polygon: polygon(26% 75%, 36% 70%, 46% 77.5%);
-  --tri08-maks-polygon: polygon(50% 37.5%, 46% 45%, 54% 45%);
-  --tri09-maks-polygon: polygon(46% 45%, 54% 45%, 50% 80%);
-  --tri10-maks-polygon: polygon(46% 35%, 47% 42.5%, 50% 40%);
-  --tri11-maks-polygon: polygon(54% 35%, 53% 42.5%, 50% 40%);
-  --tri12-maks-polygon: polygon(46% 55%, 42% 62.5%, 50% 65%);
-  --tri13-maks-polygon: polygon(54% 55%, 58% 62.5%, 50% 65%);
-  --tri14-maks-polygon: polygon(50% 50%, 70% 37.5%, 90% 45%);
-  --tri15-maks-polygon: polygon(70% 37.5%, 90% 45%, 84% 62.5%);
-  --tri16-maks-polygon: polygon(50% 50%, 70% 37.5%, 64% 70%);
-  --tri17-maks-polygon: polygon(64% 70%, 70% 37.5%, 84% 62.5%);
-  --tri18-maks-polygon: polygon(90% 45%, 96% 55%, 84% 62.5%);
-  --tri19-maks-polygon: polygon(84% 62.5%, 74% 75%, 64% 70%);
-  --tri20-maks-polygon: polygon(74% 75%, 64% 70%, 54% 77.5%);
-  --tri21-maks-polygon: polygon(30% 37.5%, 46% 45%, 50% 50%);
-  --tri22-maks-polygon: polygon(70% 37.5%, 54% 45%, 50% 50%);
-  --tri23-maks-polygon: polygon(46% 77.5%, 50% 85%, 54% 77.5%);
-  --tri24-maks-polygon: polygon(10% 45%, 20% 40%, 30% 37.5%);
-  --tri25-maks-polygon: polygon(90% 45%, 80% 40%, 70% 37.5%);
-  --tri26-maks-polygon: polygon(36% 70%, 46% 55%, 46% 77.5%);
-  --tri27-maks-polygon: polygon(64% 70%, 54% 55%, 54% 77.5%);
-  --tri28-maks-polygon: polygon(4% 55%, 8% 65%, 16% 62.5%);
-  --tri29-maks-polygon: polygon(96% 55%, 92% 65%, 84% 62.5%);
-  
-  --tri01-maks-bg: #4B3B5B;
+  /* --------------------- MAKS (Subido 15%) --------------------- */
+  --tri01-maks-polygon: polygon(50% 35%, 30% 22.5%, 10% 30%);
+  --tri02-maks-polygon: polygon(30% 22.5%, 10% 30%, 16% 47.5%);
+  --tri03-maks-polygon: polygon(50% 35%, 30% 22.5%, 36% 55%);
+  --tri04-maks-polygon: polygon(36% 55%, 30% 22.5%, 16% 47.5%);
+  --tri05-maks-polygon: polygon(10% 30%, 4% 40%, 16% 47.5%);
+  --tri06-maks-polygon: polygon(16% 47.5%, 26% 60%, 36% 55%);
+  --tri07-maks-polygon: polygon(26% 60%, 36% 55%, 46% 62.5%);
+  --tri08-maks-polygon: polygon(50% 22.5%, 46% 30%, 54% 30%);
+  --tri09-maks-polygon: polygon(46% 30%, 54% 30%, 50% 65%);
+  --tri10-maks-polygon: polygon(46% 20%, 47% 27.5%, 50% 25%);
+  --tri11-maks-polygon: polygon(54% 20%, 53% 27.5%, 50% 25%);
+  --tri12-maks-polygon: polygon(46% 40%, 42% 47.5%, 50% 50%);
+  --tri13-maks-polygon: polygon(54% 40%, 58% 47.5%, 50% 50%);
+  --tri14-maks-polygon: polygon(50% 35%, 70% 22.5%, 90% 30%);
+  --tri15-maks-polygon: polygon(70% 22.5%, 90% 30%, 84% 47.5%);
+  --tri16-maks-polygon: polygon(50% 35%, 70% 22.5%, 64% 55%);
+  --tri17-maks-polygon: polygon(64% 55%, 70% 22.5%, 84% 47.5%);
+  --tri18-maks-polygon: polygon(90% 30%, 96% 40%, 84% 47.5%);
+  --tri19-maks-polygon: polygon(84% 47.5%, 74% 60%, 64% 55%);
+  --tri20-maks-polygon: polygon(74% 60%, 64% 55%, 54% 62.5%);
+  --tri21-maks-polygon: polygon(30% 22.5%, 46% 30%, 50% 35%);
+  --tri22-maks-polygon: polygon(70% 22.5%, 54% 30%, 50% 35%);
+  --tri23-maks-polygon: polygon(46% 62.5%, 50% 70%, 54% 62.5%);
+  --tri24-maks-polygon: polygon(10% 30%, 20% 25%, 30% 22.5%);
+  --tri25-maks-polygon: polygon(90% 30%, 80% 25%, 70% 22.5%);
+  --tri26-maks-polygon: polygon(36% 55%, 46% 40%, 46% 62.5%);
+  --tri27-maks-polygon: polygon(64% 55%, 54% 40%, 54% 62.5%);
+  --tri28-maks-polygon: polygon(4% 40%, 8% 50%, 16% 47.5%);
+  --tri29-maks-polygon: polygon(96% 40%, 92% 50%, 84% 47.5%);
+
+  --tri01-maks-bg: #4b3b5b;
   --tri02-maks-bg: #333333;
-  --tri03-maks-bg: #7A6A8A;
-  --tri04-maks-bg: #E0E0E0;
+  --tri03-maks-bg: #7a6a8a;
+  --tri04-maks-bg: #e0e0e0;
   --tri05-maks-bg: #222222;
   --tri06-maks-bg: #333333;
-  --tri07-maks-bg: #4B3B5B;
+  --tri07-maks-bg: #4b3b5b;
   --tri08-maks-bg: #222222;
   --tri09-maks-bg: #333333;
-  --tri10-maks-bg: #4B3B5B;
-  --tri11-maks-bg: #4B3B5B;
-  --tri12-maks-bg: #7A6A8A;
-  --tri13-maks-bg: #7A6A8A;
-  --tri14-maks-bg: #4B3B5B;
+  --tri10-maks-bg: #4b3b5b;
+  --tri11-maks-bg: #4b3b5b;
+  --tri12-maks-bg: #7a6a8a;
+  --tri13-maks-bg: #7a6a8a;
+  --tri14-maks-bg: #4b3b5b;
   --tri15-maks-bg: #333333;
-  --tri16-maks-bg: #7A6A8A;
-  --tri17-maks-bg: #E0E0E0;
+  --tri16-maks-bg: #7a6a8a;
+  --tri17-maks-bg: #e0e0e0;
   --tri18-maks-bg: #222222;
   --tri19-maks-bg: #333333;
-  --tri20-maks-bg: #4B3B5B;
+  --tri20-maks-bg: #4b3b5b;
   --tri21-maks-bg: #222222;
   --tri22-maks-bg: #222222;
   --tri23-maks-bg: #111111;
-  --tri24-maks-bg: #7A6A8A;
-  --tri25-maks-bg: #7A6A8A;
+  --tri24-maks-bg: #7a6a8a;
+  --tri25-maks-bg: #7a6a8a;
   --tri26-maks-bg: #333333;
   --tri27-maks-bg: #333333;
-  --tri28-maks-bg: #4B3B5B;
-  --tri29-maks-bg: #4B3B5B;
+  --tri28-maks-bg: #4b3b5b;
+  --tri29-maks-bg: #4b3b5b;
 
-  /* Faro */
+  /* --------------------- FARO (Sin cambios) --------------------- */
   --tri00-faro-polygon: polygon(55% 95%, 70% 45%, 62.5% 95%);
   --tri01-faro-polygon: polygon(70% 45%, 80% 42.5%, 62.5% 95%);
   --tri02-faro-polygon: polygon(70% 55%, 87.5% 52.5%, 80% 60%);
@@ -237,7 +237,7 @@
   --tri28-faro-bg: #90a4ae;
   --tri29-faro-bg: #90a4ae;
 
-  /* Uriol */
+  /* --------------------- URIOL (Sin cambios) --------------------- */
   --tri01-uriol-polygon: polygon(50% 31.43%, 40% 50%, 60% 50%);
   --tri02-uriol-polygon: polygon(50% 31.43%, 40% 50%, 32% 42.86%);
   --tri03-uriol-polygon: polygon(50% 31.43%, 60% 50%, 68% 42.86%);
