--- a/css/animals.css
+++ b/css/animals.css
@@ -67,51 +67,57 @@
   --tri32-ori-bg: #9e8972;
 
   /* --------------------- NES  --------------------- */
-  --tri01-nes-polygon: polygon(43.75% 33%, 30.62% 57%, 71.87% 49%);
-  --tri02-nes-polygon: polygon(79.37% 33%, 38.12% 55%, 92.5% 55%);
-  --tri03-nes-polygon: polygon(30.62% 72%, 92.5% 72%, 62.5% 46%);
-  --tri04-nes-polygon: polygon(79.37% 72%, 100% 58%, 71.12% 46%);
-  --tri05-nes-polygon: polygon(30.62% 55%, 53.12% 74%, 66.25% 46%);
-  --tri06-nes-polygon: polygon(71.12% 74%, 92.5% 55%, 62.5% 46%);
-  --tri07-nes-polygon: polygon(71.12% 74%, 82.37% 74%, 79.37% 66%);
-  --tri08-nes-polygon: polygon(40.75% 74%, 43.37% 66%, 53.12% 74%);
-  --tri09-nes-polygon: polygon(0.62% 46%, 2.5% 55%, 21.25% 42%);
-  --tri10-nes-polygon: polygon(2.5% 55%, 26.87% 53%, 21.25% 42%);
-  --tri11-nes-polygon: polygon(2.5% 55%, 26.87% 53%, 21.25% 66%);
-  --tri12-nes-polygon: polygon(45.62% 68%, 26.87% 53%, 21.25% 66%);
-  --tri13-nes-polygon: polygon(30.62% 22%, 58% 22%, 34.37% 12%);
-  --tri14-nes-polygon: polygon(30.62% 22%, 58% 22%, 38.12% 30%);
-  --tri15-nes-polygon: polygon(64.37% 22%, 91.37% 22%, 88.75% 12%);
-  --tri16-nes-polygon: polygon(64.37% 22%, 91.37% 22%, 85% 30%);
-  --tri17-nes-polygon: polygon(30.62% 30%, 61.37% 20%, 92.5% 30%);
-  --tri18-nes-polygon: polygon(30.62% 30%, 61.37% 43%, 92.5% 30%);
-  --tri19-nes-polygon: polygon(45.62% 42%, 61.37% 66%, 77.5% 42%);
-  --tri20-nes-polygon: polygon(43.75% 30%, 51.25% 34%, 51.25% 30%);
-  --tri21-nes-polygon: polygon(71.87% 30%, 71.87% 34%, 79.37% 30%);
-  --tri22-nes-polygon: polygon(56.87% 35%, 58.75% 37%, 60.62% 35%);
+    /* Polígonos */
+    --tri01-nes-polygon: polygon(47.5% 36%, 42.2% 54%, 58.7% 48%);
+    --tri02-nes-polygon: polygon(61.7% 36%, 45.2% 52.5%, 67% 52.5%);
+    --tri03-nes-polygon: polygon(42.2% 65%, 67% 65%, 55% 45.8%);
+    --tri04-nes-polygon: polygon(61.7% 65%, 70% 55%, 58.4% 45.8%);
+    --tri05-nes-polygon: polygon(42.2% 54%, 51.2% 67%, 56.5% 45.8%);
+    --tri06-nes-polygon: polygon(58.4% 67%, 67% 52.5%, 55% 45.8%);
+    --tri07-nes-polygon: polygon(58.4% 67%, 62.9% 67%, 61.7% 61%);
+    --tri08-nes-polygon: polygon(46.3% 67%, 47.3% 61%, 51.2% 67%);
+    --tri09-nes-polygon: polygon(30.2% 45.8%, 31% 52.5%, 38.5% 43%);
+    --tri10-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 43%);
+    --tri11-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 61%);
+    --tri12-nes-polygon: polygon(48.2% 62%, 40.7% 51%, 38.5% 61%);
+    --tri13-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 43.7% 20%);
+    --tri14-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 45.2% 34%);
+    --tri15-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 65.5% 20%);
+    --tri16-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 64% 34%);
+    --tri17-nes-polygon: polygon(42.2% 34%, 54.5% 26%, 67% 34%);
+    --tri18-nes-polygon: polygon(42.2% 34%, 54.5% 43.5%, 67% 34%);
+    --tri19-nes-polygon: polygon(48.2% 43%, 54.5% 61%, 61% 43%);
+    --tri20-nes-polygon: polygon(47.5% 34%, 50.5% 37%, 50.5% 34%);
+    --tri21-nes-polygon: polygon(58.7% 34%, 58.7% 37%, 61.7% 34%);
+    --tri22-nes-polygon: polygon(52.7% 37.5%, 53.5% 39%, 54.2% 37.5%);
+    --tri23-nes-polygon: polygon(45% 27%, 50% 27%, 45.5% 23%);
+    --tri24-nes-polygon: polygon(59% 27%, 64% 27%, 63.5% 23%);
 
-  --tri01-nes-bg: #e0dddd;
-  --tri02-nes-bg: #d3d1d1;
-  --tri03-nes-bg: #cfcfcf;
-  --tri04-nes-bg: #c4c4c4;
-  --tri05-nes-bg: #dfe6ed;
-  --tri06-nes-bg: #dfe6ed;
-  --tri07-nes-bg: #b0c0d0;
-  --tri08-nes-bg: #b0c0d0;
-  --tri09-nes-bg: #dfe6ed;
-  --tri10-nes-bg: #dfe6ed;
-  --tri11-nes-bg: #dfe6ed;
-  --tri12-nes-bg: #dfe6ed;
-  --tri13-nes-bg: #b0c0d0;
-  --tri14-nes-bg: #b0c0d0;
-  --tri15-nes-bg: #b0c0d0;
-  --tri16-nes-bg: #b0c0d0;
-  --tri17-nes-bg: #b0c0d0;
-  --tri18-nes-bg: #b0c0d0;
-  --tri19-nes-bg: #f8f8fa;
-  --tri20-nes-bg: #333333;
-  --tri21-nes-bg: #333;
-  --tri22-nes-bg: #a0a6b0;
+    /* Colores */
+    --tri01-nes-bg: #d8d5d5;
+    --tri02-nes-bg: #cbc9c9;
+    --tri03-nes-bg: #c7c7c7;
+    --tri04-nes-bg: #bcbcbc;
+    --tri05-nes-bg: #d7dee5;
+    --tri06-nes-bg: #d7dee5;
+    --tri07-nes-bg: #a8b8c8;
+    --tri08-nes-bg: #a8b8c8;
+    --tri09-nes-bg: #8fa1b3;
+    --tri10-nes-bg: #8fa1b3;
+    --tri11-nes-bg: #8fa1b3;
+    --tri12-nes-bg: #8fa1b3;
+    --tri13-nes-bg: #7a8a99;
+    --tri14-nes-bg: #7a8a99;
+    --tri15-nes-bg: #7a8a99;
+    --tri16-nes-bg: #7a8a99;
+    --tri17-nes-bg: #a1b1c1;
+    --tri18-nes-bg: #a1b1c1;
+    --tri19-nes-bg: #f0f0f2;
+    --tri20-nes-bg: #2b2b2b;
+    --tri21-nes-bg: #2b2b2b;
+    --tri22-nes-bg: #989ea8;
+    --tri23-nes-bg: #ffffff;
+    --tri24-nes-bg: #ffffff;
 
   /* --------------------- MAKS --------------------- */
   --tri01-maks-polygon: polygon(50% 35%, 30% 22.5%, 10% 30%);
@@ -357,7 +363,7 @@
   --tri26-ezq-bg: #17280b;
   --tri27-ezq-polygon: polygon(50.24% 40.08%, 43.91% 25.00%, 47.89% 17.66%);
   --tri27-ezq-bg: #f2f2f2;
-  --tri28-ezq-polygon: polygon(59.36% 25.65%, 58.87% 29.98%, 52.43% 22.42%);
+  --tri28-ezq-polygon: polygon(62.36% 26.65%, 58.87% 29.98%, 49.43% 20.30%);
   --tri28-ezq-bg: #ffffff;
   --tri29-ezq-polygon: polygon(52.05% 10.29%, 47.59% 18.47%, 52.38% 22.61%);
   --tri29-ezq-bg: #f9f9f9;
