--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     height: 500vh;
     background-color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
+    transition: all 1s ease-in-out;
 }
 
 .scene {
@@ -21,11 +23,37 @@ body {
     transition: all 1s ease-in-out;
 }
 
-
 .scene.nes .tri {
     clip-path: var(--shape-nes);
 }
 
 .scene.nes .hide {
     opacity: 0;
+}
+
+.name {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    top: 15%;
+    transition: all 1s ease-in-out;
+}
+
+.buttons {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    bottom: 15%;
+    gap: 1em;
+}
+
+.buttons button {
+    font-size: 1em;
+    font-family: inherit;
+    width: 10em;
+    padding: 1em 0;
 }
