--- a/css/animals.css
+++ b/css/animals.css
@@ -67,57 +67,57 @@
   --tri32-ori-bg: #9e8972;
 
   /* --------------------- NES  --------------------- */
-    /* Polígonos */
-    --tri01-nes-polygon: polygon(47.5% 36%, 42.2% 54%, 58.7% 48%);
-    --tri02-nes-polygon: polygon(61.7% 36%, 45.2% 52.5%, 67% 52.5%);
-    --tri03-nes-polygon: polygon(42.2% 65%, 67% 65%, 55% 45.8%);
-    --tri04-nes-polygon: polygon(61.7% 65%, 70% 55%, 58.4% 45.8%);
-    --tri05-nes-polygon: polygon(42.2% 54%, 51.2% 67%, 56.5% 45.8%);
-    --tri06-nes-polygon: polygon(58.4% 67%, 67% 52.5%, 55% 45.8%);
-    --tri07-nes-polygon: polygon(58.4% 67%, 62.9% 67%, 61.7% 61%);
-    --tri08-nes-polygon: polygon(46.3% 67%, 47.3% 61%, 51.2% 67%);
-    --tri09-nes-polygon: polygon(30.2% 45.8%, 31% 52.5%, 38.5% 43%);
-    --tri10-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 43%);
-    --tri11-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 61%);
-    --tri12-nes-polygon: polygon(48.2% 62%, 40.7% 51%, 38.5% 61%);
-    --tri13-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 43.7% 20%);
-    --tri14-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 45.2% 34%);
-    --tri15-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 65.5% 20%);
-    --tri16-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 64% 34%);
-    --tri17-nes-polygon: polygon(42.2% 34%, 54.5% 26%, 67% 34%);
-    --tri18-nes-polygon: polygon(42.2% 34%, 54.5% 43.5%, 67% 34%);
-    --tri19-nes-polygon: polygon(48.2% 43%, 54.5% 61%, 61% 43%);
-    --tri20-nes-polygon: polygon(47.5% 34%, 50.5% 37%, 50.5% 34%);
-    --tri21-nes-polygon: polygon(58.7% 34%, 58.7% 37%, 61.7% 34%);
-    --tri22-nes-polygon: polygon(52.7% 37.5%, 53.5% 39%, 54.2% 37.5%);
-    --tri23-nes-polygon: polygon(45% 27%, 50% 27%, 45.5% 23%);
-    --tri24-nes-polygon: polygon(59% 27%, 64% 27%, 63.5% 23%);
+  /* Polígonos */
+  --tri01-nes-polygon: polygon(47.5% 36%, 42.2% 54%, 58.7% 48%);
+  --tri02-nes-polygon: polygon(61.7% 36%, 45.2% 52.5%, 67% 52.5%);
+  --tri03-nes-polygon: polygon(42.2% 65%, 67% 65%, 55% 45.8%);
+  --tri04-nes-polygon: polygon(61.7% 65%, 70% 55%, 58.4% 45.8%);
+  --tri05-nes-polygon: polygon(42.2% 54%, 51.2% 67%, 56.5% 45.8%);
+  --tri06-nes-polygon: polygon(58.4% 67%, 67% 52.5%, 55% 45.8%);
+  --tri07-nes-polygon: polygon(58.4% 67%, 62.9% 67%, 61.7% 61%);
+  --tri08-nes-polygon: polygon(46.3% 67%, 47.3% 61%, 51.2% 67%);
+  --tri09-nes-polygon: polygon(30.2% 45.8%, 31% 52.5%, 38.5% 43%);
+  --tri10-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 43%);
+  --tri11-nes-polygon: polygon(31% 52.5%, 40.7% 51%, 38.5% 61%);
+  --tri12-nes-polygon: polygon(48.2% 62%, 40.7% 51%, 38.5% 61%);
+  --tri13-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 43.7% 20%);
+  --tri14-nes-polygon: polygon(42.2% 28%, 53.2% 28%, 45.2% 34%);
+  --tri15-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 65.5% 20%);
+  --tri16-nes-polygon: polygon(55.7% 28%, 66.5% 28%, 64% 34%);
+  --tri17-nes-polygon: polygon(42.2% 34%, 54.5% 26%, 67% 34%);
+  --tri18-nes-polygon: polygon(42.2% 34%, 54.5% 43.5%, 67% 34%);
+  --tri19-nes-polygon: polygon(48.2% 43%, 54.5% 61%, 61% 43%);
+  --tri20-nes-polygon: polygon(47.5% 34%, 50.5% 37%, 50.5% 34%);
+  --tri21-nes-polygon: polygon(58.7% 34%, 58.7% 37%, 61.7% 34%);
+  --tri22-nes-polygon: polygon(52.7% 37.5%, 53.5% 39%, 54.2% 37.5%);
+  --tri23-nes-polygon: polygon(45% 27%, 50% 27%, 45.5% 23%);
+  --tri24-nes-polygon: polygon(59% 27%, 64% 27%, 63.5% 23%);
 
-    /* Colores */
-    --tri01-nes-bg: #d8d5d5;
-    --tri02-nes-bg: #cbc9c9;
-    --tri03-nes-bg: #c7c7c7;
-    --tri04-nes-bg: #bcbcbc;
-    --tri05-nes-bg: #d7dee5;
-    --tri06-nes-bg: #d7dee5;
-    --tri07-nes-bg: #a8b8c8;
-    --tri08-nes-bg: #a8b8c8;
-    --tri09-nes-bg: #8fa1b3;
-    --tri10-nes-bg: #8fa1b3;
-    --tri11-nes-bg: #8fa1b3;
-    --tri12-nes-bg: #8fa1b3;
-    --tri13-nes-bg: #7a8a99;
-    --tri14-nes-bg: #7a8a99;
-    --tri15-nes-bg: #7a8a99;
-    --tri16-nes-bg: #7a8a99;
-    --tri17-nes-bg: #a1b1c1;
-    --tri18-nes-bg: #a1b1c1;
-    --tri19-nes-bg: #f0f0f2;
-    --tri20-nes-bg: #2b2b2b;
-    --tri21-nes-bg: #2b2b2b;
-    --tri22-nes-bg: #989ea8;
-    --tri23-nes-bg: #ffffff;
-    --tri24-nes-bg: #ffffff;
+  /* Colores */
+  --tri01-nes-bg: #d8d5d5;
+  --tri02-nes-bg: #cbc9c9;
+  --tri03-nes-bg: #c7c7c7;
+  --tri04-nes-bg: #bcbcbc;
+  --tri05-nes-bg: #d7dee5;
+  --tri06-nes-bg: #d7dee5;
+  --tri07-nes-bg: #a8b8c8;
+  --tri08-nes-bg: #a8b8c8;
+  --tri09-nes-bg: #8fa1b3;
+  --tri10-nes-bg: #8fa1b3;
+  --tri11-nes-bg: #8fa1b3;
+  --tri12-nes-bg: #8fa1b3;
+  --tri13-nes-bg: #7a8a99;
+  --tri14-nes-bg: #7a8a99;
+  --tri15-nes-bg: #7a8a99;
+  --tri16-nes-bg: #7a8a99;
+  --tri17-nes-bg: #a1b1c1;
+  --tri18-nes-bg: #a1b1c1;
+  --tri19-nes-bg: #f0f0f2;
+  --tri20-nes-bg: #2b2b2b;
+  --tri21-nes-bg: #2b2b2b;
+  --tri22-nes-bg: #989ea8;
+  --tri23-nes-bg: #ffffff;
+  --tri24-nes-bg: #ffffff;
 
   /* --------------------- MAKS --------------------- */
   --tri01-maks-polygon: polygon(50% 35%, 30% 22.5%, 10% 30%);
@@ -379,4 +379,76 @@
   --tri34-ezq-bg: #ff0000;
   --tri35-ezq-polygon: polygon(40.39% 31.66%, 35.34% 35.69%, 29.32% 45.41%);
   --tri35-ezq-bg: #241c1c;
+
+  /* Jiménez */
+  --tri01-jimenez-polygon: polygon(35.66% 43.53%, 25.98% 46.50%, 29.71% 54.68%);
+  --tri01-jimenez-bg: #3e4837;
+  --tri02-jimenez-polygon: polygon(35.75% 43.49%, 68.96% 55.39%, 40.05% 55.48%);
+  --tri02-jimenez-bg: #5d6c53;
+  --tri03-jimenez-polygon: polygon(38.53% 44.51%, 49.51% 44.12%, 44.92% 42.63%);
+  --tri03-jimenez-bg: #338000;
+  --tri04-jimenez-polygon: polygon(49.54% 44.12%, 68.34% 45.23%, 68.93% 55.40%);
+  --tri04-jimenez-bg: #7c916f;
+  --tri05-jimenez-polygon: polygon(38.60% 44.51%, 49.60% 44.12%, 69.02% 55.42%);
+  --tri05-jimenez-bg: #3e4837;
+  --tri06-jimenez-polygon: polygon(68.31% 45.21%, 68.96% 55.44%, 80.52% 48.24%);
+  --tri06-jimenez-bg: #5d6c53;
+  --tri07-jimenez-polygon: polygon(80.49% 48.26%, 69.02% 55.4%, 91.67% 52.49%);
+  --tri07-jimenez-bg: #7c916f;
+  --tri08-jimenez-polygon: polygon(91.67% 52.46%, 96.44% 55.35%, 69.08% 55.31%);
+  --tri08-jimenez-bg: #338000;
+  --tri09-jimenez-polygon: polygon(91.92% 52.60%, 89.44% 50.38%, 85.35% 50.16%);
+  --tri09-jimenez-bg: #338000;
+  --tri10-jimenez-polygon: polygon(80.42% 48.37%, 85.97% 50.37%, 84.02% 48.32%);
+  --tri10-jimenez-bg: #338000;
+  --tri11-jimenez-polygon: polygon(80.52% 48.26%, 78.44% 46.31%, 73.42% 46.46%);
+  --tri11-jimenez-bg: #338000;
+  --tri12-jimenez-polygon: polygon(68.34% 45.28%, 71.97% 44.71%, 73.58% 46.55%);
+  --tri12-jimenez-bg: #338000;
+  --tri13-jimenez-polygon: polygon(68.38% 45.26%, 63.57% 43.33%, 57.93% 44.69%);
+  --tri13-jimenez-bg: #338000;
+  --tri14-jimenez-polygon: polygon(49.48% 44.14%, 54.77% 42.69%, 58.31% 44.71%);
+  --tri14-jimenez-bg: #338000;
+  --tri15-jimenez-polygon: polygon(35.72% 43.48%, 29.71% 54.70%, 40.03% 55.46%);
+  --tri15-jimenez-bg: #7c916f;
+  --tri16-jimenez-polygon: polygon(27.39% 57.59%, 39.72% 57.61%, 40.21% 55.33%);
+  --tri16-jimenez-bg: #447821;
+  --tri17-jimenez-polygon: polygon(40.09% 55.42%, 32.47% 54.89%, 27.42% 57.66%);
+  --tri17-jimenez-bg: #3e4837;
+  --tri18-jimenez-polygon: polygon(54.8% 57.61%, 69.49% 57.59%, 68.87% 55.35%);
+  --tri18-jimenez-bg: #3e4837;
+  --tri19-jimenez-polygon: polygon(68.87% 55.37%, 57.96% 55.46%, 54.84% 57.66%);
+  --tri19-jimenez-bg: #447821;
+  --tri20-jimenez-polygon: polygon(16.54% 56.52%, 26.58% 56.49%, 29.77% 54.70%);
+  --tri20-jimenez-bg: #5d6c53;
+  --tri21-jimenez-polygon: polygon(22.58% 53.49%, 16.54% 56.49%, 29.77% 54.72%);
+  --tri21-jimenez-bg: #447821;
+  --tri22-jimenez-polygon: polygon(24.2% 48.04%, 26.27% 47.41%, 25.78% 45.39%);
+  --tri22-jimenez-bg: #000000;
+  --tri23-jimenez-polygon: polygon(21.56% 46.99%, 25.81% 45.45%, 24.26% 48.04%);
+  --tri23-jimenez-bg: #000000;
+  --tri24-jimenez-polygon: polygon(26.21% 45.34%, 23.2% 45.54%, 21.62% 47.03%);
+  --tri24-jimenez-bg: #000000;
+  --tri25-jimenez-polygon: polygon(9.64% 51.36%, 29.64% 54.67%, 18.26% 45.48%);
+  --tri25-jimenez-bg: #7c916f;
+  --tri26-jimenez-polygon: polygon(26.36% 47.09%, 24.14% 48.08%, 29.75% 54.77%);
+  --tri26-jimenez-bg: #008000;
+  --tri27-jimenez-polygon: polygon(18.90% 45.94%, 24.11% 47.99%, 29.5% 54.5%);
+  --tri27-jimenez-bg: #bec8b7;
+  --tri28-jimenez-polygon: polygon(18.00% 45.69%, 12% 46.1%, 9.68% 51.36%);
+  --tri28-jimenez-bg: #5d6c53;
+  --tri29-jimenez-polygon: polygon(11.96% 46.19%, 6.88% 45.66%, 9.68% 51.39%);
+  --tri29-jimenez-bg: #bec8b7;
+  --tri30-jimenez-polygon: polygon(6.83% 45.54%, 5.21% 48.54%, 9.64% 51.39%);
+  --tri30-jimenez-bg: #9dac93;
+  --tri31-jimenez-polygon: polygon(21.60% 47.06%, 24.80% 43.93%, 18.23% 45.57%);
+  --tri31-jimenez-bg: #225500;
+  --tri32-jimenez-polygon: polygon(24.75% 43.96%, 31.06% 45.01%, 23.18% 45.54%);
+  --tri32-jimenez-bg: #338000;
+  --tri33-jimenez-polygon: polygon(22.48% 43.56%, 18.27% 45.60%, 24.71% 43.96%);
+  --tri33-jimenez-bg: #9dac93;
+  --tri34-jimenez-polygon: polygon(31.02% 44.98%, 25.72% 45.35%, 25.94% 47.30%);
+  --tri34-jimenez-bg: #2d5016;
+  --tri35-jimenez-polygon: polygon(6.83% 45.54%, 5.21% 48.54%, 9.64% 51.39%);
+  --tri35-jimenez-bg: #9dac93;
 }
