Llamicornio y camaleon añadidos

--- a/css/animals.css
+++ b/css/animals.css
@@ -12,8 +12,8 @@
   --tri10-ori-polygon: polygon(72.13% 63.72%, 60.51% 37.48%, 85.87% 51.62%);
   --tri11-ori-polygon: polygon(94.21% 58.29%, 87.1% 51.03%, 99.91% 45.33%);
   --tri12-ori-polygon: polygon(95.32% 39.5%, 91.5% 33.58%, 97.89% 31.64%);
-  --tri13-ori-polygon: polygon(86.26% 66.69%, 91.71% 65.29%, 86.63% 52.18%);
-  --tri14-ori-polygon: polygon(91.45% 32.69%, 76.95% 34.89%, 86.75% 52.23%);
+  --tri13-ori-polygon: polygon(86.26% 66.69%, 91.71% 65.29%, 84.63% 42.18%);
+  --tri14-ori-polygon: polygon(91.45% 32.69%, 75.95% 34.89%, 86.67% 52.80%);
   --tri15-ori-polygon: polygon(77.24% 59.29%, 86.25% 66.71%, 86.09% 51.62%);
   --tri16-ori-polygon: polygon(87.08% 51.08%, 94.2% 58.27%, 91.73% 65.28%);
   --tri17-ori-polygon: polygon(90.73% 61.42%, 86.46% 61.87%, 88.91% 64.45%);
@@ -67,7 +67,6 @@
   --tri32-ori-bg: #9e8972;
 
   /* --------------------- NES  --------------------- */
-  /* Polígonos */
   --tri01-nes-polygon: polygon(47.5% 36%, 42.2% 54%, 58.7% 48%);
   --tri02-nes-polygon: polygon(61.7% 36%, 45.2% 52.5%, 67% 52.5%);
   --tri03-nes-polygon: polygon(42.2% 65%, 67% 65%, 55% 45.8%);
@@ -92,8 +91,6 @@
   --tri22-nes-polygon: polygon(52.7% 37.5%, 53.5% 39%, 54.2% 37.5%);
   --tri23-nes-polygon: polygon(45% 27%, 50% 27%, 45.5% 23%);
   --tri24-nes-polygon: polygon(59% 27%, 64% 27%, 63.5% 23%);
-
-  /* Colores */
   --tri01-nes-bg: #d8d5d5;
   --tri02-nes-bg: #cbc9c9;
   --tri03-nes-bg: #c7c7c7;
@@ -149,7 +146,6 @@
   --tri27-maks-polygon: polygon(64% 55%, 54% 40%, 54% 62.5%);
   --tri28-maks-polygon: polygon(4% 40%, 8% 50%, 16% 47.5%);
   --tri29-maks-polygon: polygon(46% 30%, 54% 30%, 50% 65%);
-
   --tri01-maks-bg: #4b3b5b;
   --tri02-maks-bg: #333333;
   --tri03-maks-bg: #7a6a8a;
@@ -211,7 +207,6 @@
   --tri27-faro-polygon: polygon(55% 31.25%, 60% 31.25%, 57.5% 36.25%);
   --tri28-faro-polygon: polygon(50% 85%, 57.5% 87.5%, 53.75% 88.75%);
   --tri29-faro-polygon: polygon(53.75% 88.75%, 52.5% 90%, 50% 85%);
-
   --tri00-faro-bg: #8d6e63;
   --tri01-faro-bg: #8d6e63;
   --tri02-faro-bg: #8d6e63;
@@ -275,7 +270,6 @@
   --tri29-uriol-polygon: polygon(40% 82.86%, 44% 92.86%, 48% 88.57%);
   --tri30-uriol-polygon: polygon(60% 82.86%, 68% 92.86%, 56% 92.86%);
   --tri31-uriol-polygon: polygon(60% 82.86%, 56% 92.86%, 52% 88.57%);
-
   --tri01-uriol-bg: #ffffff;
   --tri02-uriol-bg: #f2f2f2;
   --tri03-uriol-bg: #f2f2f2;
@@ -451,4 +445,158 @@
   --tri34-jimenez-bg: #2d5016;
   --tri35-jimenez-polygon: polygon(6.83% 45.54%, 5.21% 48.54%, 9.64% 51.39%);
   --tri35-jimenez-bg: #9dac93;
+
+  /* Karla */
+  --tri01-karla-polygon: polygon(25% 12%, 28% 20%, 33% 18%);
+  --tri01-karla-bg: #FDD835;
+  --tri02-karla-polygon: polygon(29% 23%, 25% 21%, 25% 25%);
+  --tri02-karla-bg: #111111;
+  --tri03-karla-polygon: polygon(33% 18%, 36% 8%, 39% 20%);
+  --tri03-karla-bg: #F06292;
+  --tri04-karla-polygon: polygon(36% 8%, 39% 20%, 36% 22%);
+  --tri04-karla-bg: #C2185B;
+  --tri05-karla-polygon: polygon(15% 22%, 33% 18%, 33% 30%);
+  --tri05-karla-bg: #F8BBD0;
+  --tri06-karla-polygon: polygon(15% 22%, 33% 30%, 25% 32%);
+  --tri06-karla-bg: #F06292;
+  --tri07-karla-polygon: polygon(25% 32%, 33% 30%, 30% 38%);
+  --tri07-karla-bg: #C2185B;
+  --tri08-karla-polygon: polygon(33% 18%, 40% 20%, 33% 30%);
+  --tri08-karla-bg: #F8BBD0;
+  --tri09-karla-polygon: polygon(33% 30%, 40% 20%, 40% 45%);
+  --tri09-karla-bg: #F06292;
+  --tri10-karla-polygon: polygon(45% 70%, 52% 70%, 50% 88%);
+  --tri10-karla-bg: #880E4F;
+  --tri11-karla-polygon: polygon(63% 65%, 70% 65%, 72% 85%);
+  --tri11-karla-bg: #880E4F;
+  --tri12-karla-polygon: polygon(40% 20%, 46% 22%, 40% 30%);
+  --tri12-karla-bg: #8E24AA;
+  --tri13-karla-polygon: polygon(40% 30%, 46% 22%, 46% 32%);
+  --tri13-karla-bg: #BA68C8;
+  --tri14-karla-polygon: polygon(40% 30%, 46% 32%, 40% 40%);
+  --tri14-karla-bg: #4A148C;
+  --tri15-karla-polygon: polygon(40% 40%, 46% 32%, 47% 42%);
+  --tri15-karla-bg: #8E24AA;
+  --tri18-karla-polygon: polygon(40% 40%, 47% 42%, 40% 50%);
+  --tri18-karla-bg: #BA68C8;
+  --tri17-karla-polygon: polygon(32% 55%, 40% 45%, 45% 60%);
+  --tri17-karla-bg: #F06292;
+  --tri16-karla-polygon: polygon(40% 45%, 55% 45%, 45% 60%);
+  --tri16-karla-bg: #F8BBD0;
+  --tri19-karla-polygon: polygon(32% 55%, 45% 60%, 42% 75%);
+  --tri19-karla-bg: #C2185B;
+  --tri20-karla-polygon: polygon(55% 45%, 65% 50%, 45% 60%);
+  --tri20-karla-bg: #F06292;
+  --tri21-karla-polygon: polygon(45% 60%, 65% 50%, 60% 65%);
+  --tri21-karla-bg: #F8BBD0;
+  --tri22-karla-polygon: polygon(45% 60%, 60% 65%, 50% 75%);
+  --tri22-karla-bg: #C2185B;
+  --tri23-karla-polygon: polygon(42% 75%, 45% 60%, 50% 75%);
+  --tri23-karla-bg: #F06292;
+  --tri24-karla-polygon: polygon(42% 75%, 50% 75%, 46% 85%);
+  --tri24-karla-bg: #880E4F;
+  --tri25-karla-polygon: polygon(46% 85%, 50% 75%, 48% 92%);
+  --tri25-karla-bg: #C2185B;
+  --tri26-karla-polygon: polygon(30% 38%, 33% 30%, 40% 45%);
+  --tri26-karla-bg: #F8BBD0;
+  --tri27-karla-polygon: polygon(60% 65%, 65% 50%, 68% 68%);
+  --tri27-karla-bg: #F06292;
+  --tri28-karla-polygon: polygon(60% 65%, 68% 68%, 62% 78%);
+  --tri28-karla-bg: #C2185B;
+  --tri29-karla-polygon: polygon(62% 78%, 68% 68%, 65% 92%);
+  --tri29-karla-bg: #880E4F;
+  --tri30-karla-polygon: polygon(30% 38%, 40% 45%, 32% 55%);
+  --tri30-karla-bg: #C2185B;
+  --tri31-karla-polygon: polygon(65% 50%, 72% 52%, 68% 60%);
+  --tri31-karla-bg: #4A148C;
+  --tri32-karla-polygon: polygon(68% 60%, 72% 52%, 75% 65%);
+  --tri32-karla-bg: #8E24AA;
+  --tri33-karla-polygon: polygon(75% 65%, 68% 60%, 72% 75%);
+  --tri33-karla-bg: #BA68C8;
+  --tri34-karla-polygon: polygon(72% 75%, 75% 65%, 78% 70%);
+  --tri34-karla-bg: #4A148C;
+  --tri35-karla-polygon: polygon(25% 25%, 25% 21%, 30% 23%);
+  --tri35-karla-bg: #120522;
+
+  /* Founeke */
+  --tri01-fofana-bg: #000000;
+  --tri02-fofana-bg: #000000;
+  --tri03-fofana-bg: #4d4d4d;
+  --tri04-fofana-bg: #000000;
+  --tri05-fofana-bg: #999999;
+  --tri06-fofana-bg: #999999;
+  --tri07-fofana-bg: #000000;
+  --tri08-fofana-bg: #ff7f2a;
+  --tri09-fofana-bg: #000000;
+  --tri10-fofana-bg: #666666;
+  --tri11-fofana-bg: #999999;
+  --tri12-fofana-bg: #000000;
+  --tri13-fofana-bg: #4d4d4d;
+  --tri14-fofana-bg: #4d4d4d;
+  --tri15-fofana-bg: #000000;
+  --tri16-fofana-bg: #000000;
+  --tri17-fofana-bg: #4d4d4d;
+  --tri18-fofana-bg: #000000;
+  --tri19-fofana-bg: #4d4d4d;
+  --tri20-fofana-bg: #000000;
+  --tri21-fofana-bg: #000000;
+  --tri22-fofana-bg: #000000;
+  --tri23-fofana-bg: #4d4d4d;
+  --tri24-fofana-bg: #000000;
+  --tri25-fofana-bg: #cccccc;
+  --tri26-fofana-bg: #000000;
+  --tri27-fofana-bg: #cccccc;
+  --tri28-fofana-bg: #b3b3b3;
+  --tri29-fofana-bg: #1a1a1a;
+  --tri30-fofana-bg: #000000;
+  --tri31-fofana-bg: #666666;
+  --tri32-fofana-bg: #4d4d4d;
+  --tri33-fofana-bg: #999999;
+  --tri34-fofana-bg: #000000;
+  --tri35-fofana-bg: #ffffff;
+  --tri36-fofana-bg: #cccccc;
+  --tri37-fofana-bg: #cccccc;
+  --tri38-fofana-bg: #999999;
+  --tri39-fofana-bg: #999999;
+  --tri40-fofana-bg: #000000;
+  --tri01-fofana-polygon: polygon(23.93% 24.38%, 39.65% 26.15%, 39.59% 18.50%);
+  --tri02-fofana-polygon: polygon(85.78% 46.94%, 77.04% 54.81%, 87.37% 57.79%);
+  --tri03-fofana-polygon: polygon(77.12% 54.81%, 84.53% 64.37%, 87.38% 57.77%);
+  --tri04-fofana-polygon: polygon(23.92% 24.37%, 12.35% 31.21%, 26.87% 32.38%);
+  --tri05-fofana-polygon: polygon(25.11% 27.62%, 21.82% 28.82%, 25.77% 29.74%);
+  --tri06-fofana-polygon: polygon(23.88% 24.34%, 26.71% 32.33%, 39.69% 26.15%);
+  --tri07-fofana-polygon: polygon(25.15% 27.57%, 25.78% 29.67%, 28.35% 27.99%);
+  --tri08-fofana-polygon: polygon(12.13% 31.25%, 14.01% 33.48%, 19.59% 31.82%);
+  --tri09-fofana-polygon: polygon(40.90% 43.27%, 37.45% 46.41%, 45.16% 47.77%);
+  --tri10-fofana-polygon: polygon(45.16% 47.76%, 40.08% 48.88%, 37.44% 46.38%);
+  --tri11-fofana-polygon: polygon(37.43% 46.51%, 33.98% 49.46%, 40.02% 48.88%);
+  --tri12-fofana-polygon: polygon(31.39% 46.00%, 33.93% 49.46%, 37.07% 46.73%);
+  --tri13-fofana-polygon: polygon(31.39% 46.00%, 33.99% 49.46%, 27.00% 48.63%);
+  --tri14-fofana-polygon: polygon(49.27% 39.57%, 46.23% 46.00%, 40.84% 43.21%);
+  --tri15-fofana-polygon: polygon(49.53% 39.45%, 46.14% 46.03%, 55.52% 49.81%);
+  --tri16-fofana-polygon: polygon(55.52% 49.64%, 47.53% 51.36%, 53.90% 54.65%);
+  --tri17-fofana-polygon: polygon(47.44% 51.34%, 43.77% 54.05%, 53.81% 54.63%);
+  --tri18-fofana-polygon: polygon(53.94% 54.69%, 60.58% 57.49%, 63.50% 48.11%);
+  --tri19-fofana-polygon: polygon(40.51% 43.27%, 45.43% 47.81%, 49.61% 39.58%);
+  --tri20-fofana-polygon: polygon(34.26% 49.46%, 41.78% 51.64%, 39.83% 48.54%);
+  --tri21-fofana-polygon: polygon(63.18% 48.95%, 61.32% 55.35%, 79.00% 54.82%);
+  --tri22-fofana-polygon: polygon(39.70% 26.12%, 58.32% 29.22%, 41.02% 43.06%);
+  --tri23-fofana-polygon: polygon(58.28% 29.25%, 75.45% 36.05%, 54.07% 47.18%);
+  --tri24-fofana-polygon: polygon(74.93% 35.99%, 68.86% 51.44%, 85.82% 46.95%);
+  --tri25-fofana-polygon: polygon(77.06% 55.22%, 73.71% 67.85%, 84.44% 64.33%);
+  --tri26-fofana-polygon: polygon(84.16% 64.44%, 73.28% 73.95%, 73.71% 67.85%);
+  --tri27-fofana-polygon: polygon(55.28% 46.54%, 69.38% 51.45%, 74.93% 35.70%);
+  --tri28-fofana-polygon: polygon(55.74% 46.78%, 54.25% 54.63%, 62.59% 49.04%);
+  --tri29-fofana-polygon: polygon(67.61% 70.96%, 66.11% 76.34%, 73.08% 73.93%);
+  --tri30-fofana-polygon: polygon(67.54% 70.95%, 66.12% 76.34%, 58.98% 73.66%);
+  --tri31-fofana-polygon: polygon(67.63% 70.97%, 73.21% 73.93%, 74.00% 67.50%);
+  --tri32-fofana-polygon: polygon(58.88% 73.68%, 55.13% 76.46%, 65.89% 76.29%);
+  --tri33-fofana-polygon: polygon(58.86% 73.67%, 46.44% 74.70%, 55.03% 76.47%);
+  --tri34-fofana-polygon: polygon(39.99% 25.96%, 26.65% 32.53%, 39.81% 32.03%);
+  --tri35-fofana-polygon: polygon(19.70% 31.91%, 14.38% 33.41%, 29.69% 32.53%);
+  --tri36-fofana-polygon: polygon(68.99% 51.14%, 85.51% 46.99%, 77.77% 54.63%);
+  --tri37-fofana-polygon: polygon(55.27% 49.10%, 48.15% 37.36%, 58.24% 29.19%);
+  --tri38-fofana-polygon: polygon(48.08% 37.43%, 41.02% 43.06%, 49.82% 39.37%);
+  --tri39-fofana-polygon: polygon(14.04% 33.48%, 29.00% 39.35%, 35.23% 32.16%);
+  --tri40-fofana-polygon: polygon(40.60% 43.16%, 29.00% 39.35%, 35.62% 31.91%);
 }
