--- a/css/logo.css
+++ b/css/logo.css
@@ -38,7 +38,6 @@
     --tri36-logo-polygon: polygon(59.71% 39.33%, 57.57% 31%, 52.43% 31.00%);
     --tri37-logo-polygon: polygon(59.71% 39.33%, 52.29% 30.83%, 53.14% 42.17%);
 
-
     --tri01-logo-bg: #b0c4de;
     --tri02-logo-bg: #aab0b8;
     --tri03-logo-bg: #aab0b8;
@@ -76,4 +75,33 @@
     --tri35-logo-bg: #e0d0b0;
     --tri36-logo-bg: #d2b48c;
     --tri37-logo-bg: #c2a47c;
+
+
+
+                /* Colores de fondo de los triángulos */
+            --tri01-daw-bg: #1f7a1f;
+            --tri02-daw-bg: #28a745;
+            --tri03-daw-bg: #3ecf3e;
+            --tri04-daw-bg: #2e8b57;
+            --tri05-daw-bg: #4caf50;
+            --tri06-daw-bg: #218838;
+            --tri07-daw-bg: #6fcf6f;
+            --tri08-daw-bg: #1e6f1e;
+            --tri09-daw-bg: #66bb6a;
+            --tri10-daw-bg: #43a047;
+            --tri11-daw-bg: #2e7d32;
+            --tri12-daw-bg: #81c784;
+
+            /* Polígonos de los triángulos */
+            --tri01-daw-polygon: polygon(-0.57% 23.11%, 5.86% 38.42%, 0.87% 99.71%);
+            --tri02-daw-polygon: polygon(-2.82% 20.22%, 22.75% 48.52%, 16.1% 64.44%);
+            --tri03-daw-polygon: polygon(23.31% 47.11%, 14.80% 64.47%, 18.7% 82.09%);
+            --tri04-daw-polygon: polygon(17.25% 65.31%, -0.8% 99.71%, 18.41% 82.09%);
+            --tri05-daw-polygon: polygon(61.95% 100.81%, 47.58% 28.30%, 48.85% 63.57%);
+            --tri06-daw-polygon: polygon(47.38% 29.81%, 49.72% 62.71%, 24.98% 94.51%);
+            --tri07-daw-polygon: polygon(56.91% 81.80%, 54.05% 72.24%, 35.38% 76.89%);
+            --tri08-daw-polygon: polygon(63.26% 21.38%, 62.75% 98.27%, 71.88% 64.15%);
+            --tri09-daw-polygon: polygon(79.74% 86.69%, 77.22% 38.19%, 74.05% 55.2%);
+            --tri10-daw-polygon: polygon(66.17% 82.36%, 77.22% 38.19%, 76.07% 57.22%);
+            --tri11-daw-polygon: polygon(78.38% 65.02%, 80% 100%, 93.36% 23.97%);
 }
